# mearm_model

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch
meshes/: arm_0_base.stl  arm_0_left.stl  arm_0_right.stl  arm_1_connector.stl  arm_1_left.stl  arm_1_right.stl  base.stl  base_top.stl  column_base.stl  column_board.stl  column_connector.stl  column_left.stl  column_right.stl  gripper_base.stl  gripper_left.stl  gripper_right.stl  gripper_support.stl  servo_actuator.stl
rviz/: urdf.rviz
urdf/: robot.urdf
